Add selectable playback range to movie timeline